# BoaRepository

./: README.md  pyproject.toml
orcbundle/: main.py
orcbundle/models/: bundle.py  bundle_from_publication.py  domain.py
orcbundle/resources/bundles/: a.json  bund1.json  bund2.json  ifood.json  inter_banco.json  itau_banco.json  json operation.json  supply_chain.json
orcbundle/resources/domains/: health.json  online_shopping.json  online_shopping.json.bak  online_shopping_summarized.json  online_shopping_summarized_real_svc.json  online_shopping_summarized_real_svc.json.bak  online_shopping_summarized_simulator.json  refator1_example.json.bak  seguranca_publica.json  test1.json.bak
orcbundle/resources/validation_domains/: 1-substituicao_novo_servico_.json  2-substituicao_serviço_existente.json  3-add new svc.json  4-ordem errada.json  5-fluxo de dado errado.json  6-lidar com gateway.json
orcbundle/routers/: boa_simulator_router.py  bundle_router.py  domain_router.py  theorc_router.py
orcbundle/services/: boa_simulator.py  bundle_crud.py  domain_crud.py  theorc.py
orcbundle/utils/: constants.py
tests/: test_utils.py
tests/models/: test_bundle.py
