[tool.poetry]
name = "orcbundle"
version = "0.1.0"
description = ""
authors = ["Mauricio Santiago <maubr93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^1.4.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^6.0.0"
aiohttp = "^3.11.16"
fastapi = {extras = ["standard"], version = "^0.115.12"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
